--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.20.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"]}
+serde_json = "1.0"
+url = "2.2.2"
+tokio-tungstenite = { version = "0.17.2", features = ["native-tls"]}
+futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
