--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,14 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.20.0", features = ["full"] }
+dotenv = "0.15.0"
+log = "0.4.11"
+anyhow = "1.0.33"
+thiserror = "1.0.20"
+stackdriver_logger = "0.8.0"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 url = "2.2.2"
 tokio-tungstenite = { version = "0.17.2", features = ["native-tls"]}
 futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
+futures        = "0.3.21"
